--- a/booking.html
+++ b/booking.html
@@ -19,7 +19,7 @@
             <nav id="navbar">
                 <a id="menu1" href="registeredUser.html" >Home</a>
                 <a id="menu2" href="#" class='menu active'>Booking</a>
-                <a id="menu2" href="#" class="menu">Services</a>
+                <!-- <a id="menu2" href="#" class="menu">Services</a> -->
                 <a id="menu3" href="#" class="menu">About Us</a>
             </nav>
             <div class="rightCompo">
@@ -69,6 +69,12 @@
                     <div  class="service-content">
                         <a href="#" onclick="location_thimphu()">Thimphu</a>
                         <a href="#" onclick="location_phuntsholing()">Phuntsholing</a>
+                        <a href="#" onclick="">Gelephu</a>
+                        <a href="#" onclick="">Paro</a>
+                        <a href="#" onclick="">Sandrup Jongkhar</a>
+                        <a href="#" onclick="">Wangdue</a>
+                        <a href="#" onclick="">Samtse</a>
+
                      </div>
                 </div>
 
