--- a/registeredUser.html
+++ b/registeredUser.html
@@ -18,7 +18,7 @@
             <nav id="navbar">
                 <a id="menu1" href="#" class='menu active'>Home</a>
                 <a id="menu2" href="booking.html" class="menu">Booking</a>
-                <a id="menu2" href="#" class="menu">Services</a>
+                <a id="menu2" href="#services" class="menu">Services</a>
                 <a id="menu3" href="#" class="menu">About Us</a>
             </nav>
             <div class="rightCompo">
@@ -50,7 +50,7 @@
                <p>It’s fast, it’s friendly – and it was never this easy to get a car wash so good</p> 
            </div>
            <div class="instruction">
-               <p>Services</p>
+            <p id="services">Services</p>
            </div>
            <div class="parentWrapper">
                <div class="subDiv1">
