--- a/selectServices.html
+++ b/selectServices.html
@@ -22,7 +22,7 @@
             <nav id="navbar">
                 <a id="menu1" href="registeredUser.html">Home</a>
                 <a id="menu2" href="booking.html" class='menu active'>Booking</a>
-                <a id="menu2" href="#" class="menu">Services</a>
+                <!-- <a id="menu2" href="#" class="menu">Services</a> -->
                 <a id="menu3" href="#" class="menu">About Us</a>
             </nav>
             <div class="rightCompo">
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="book">
-                        <a href="bookingForm.html"><strong>Book</strong></a>
+                        <a href="bookingForm.html"><strong>Select</strong></a>
                     </div>
                 </div>
             </div>
