--- a/landingPage.html
+++ b/landingPage.html
@@ -50,26 +50,31 @@
                    <h2>Interior Car Wash</h2>
                    <img src="interior.jpg" alt="" width="100%"/>
                    <!-- <p>It has multiple services such as Interior & Exterior Wash, Polising, Engine Wash and Vacuum Clean</p> -->
-                   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                <p>It involves removing all the crumbs, dust and other debris from the carpets, floor mats, seats and trunk. Upholstery
+                    is shampooed or refreshed using specialized methods depending on the seat material.</p>
                 </div>
                <div class="subDiv1">
                    <h2>Exterior Car Wash</h2>
                    <img src="exterior.jpg" alt="" width="100%"/>
-                   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                <p>It involves removing of exterior dirt, dust, and other loose contaminants. Next comes paint cleaning and rejuvenation
+                    to make the car surface look great and protecting application on the paint surface to keep it looking great.</p>
 
                    <!-- <p>It includes repairing of the car parts that needs to be repaired such as headlight, mirror and so on</p> -->
                </div>
                <div class="subDiv1">
                    <h2>Polishing</h2>
                    <img src="polishing.jpg" alt="" width="100%"/>
-                   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                <p>Polishes maintain and extend the life of paint by one, removing dirt too stubborn for general washing; two, removing
+                    oxidized paint (aged paint); three, smoothing out surface scratches and swirl marks; and four, conditioning the
+                    paintwork so that it doesn't dry, crack and peel.</p>
                    
                    <!-- <p>The critical fluids in the engine, such as antifreeze, brake fluid, washer fluid, and steering fluid, are topped up, as well as a visual inspection and oil and filter change. Also, to ensure that the vehicle is in the best possible condition.</p> -->
                </div>
                <div class="subDiv1">
                     <h2>Vacuum Cleaning</h2>
                     <img src="vacuum.jpg" alt="" width="100%"/>
-                    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+                    <p>A car vacuum cleaner is a device used to sweep the carpet in a vehicle. It involves removing all the crumbs, dust and
+                        other debris from the carpets, floor mats, seats and trunk.</p>
                     
                     <!-- <p>The critical fluids in the engine, such as antifreeze, brake fluid, washer fluid, and steering fluid, are topped up, as well as a visual inspection and oil and filter change. Also, to ensure that the vehicle is in the best possible condition.</p> -->
               </div>
