--- a/bookingForm.html
+++ b/bookingForm.html
@@ -50,11 +50,11 @@
                     <div class="left">
                         <div class="sub-content1">
                             <label>Name:</label>
-                            <input type="text" required />
+                            <input type="text" value="Sangay" required />
                         </div>
                         <div class="sub-content1">
                             <label>Contact No:</label>
-                            <input type="number" required />
+                            <input type="number" value="17363107" required />
                         </div>
                     </div>
                     <div class="right">
@@ -63,12 +63,16 @@
                             <select required>
                                 <option disabled selected hidden>select a vehicle type</option>
                                 <option value=""></option>
-                                <option value="">Source NTP</option>
-                                <option value="">GSR1 - Incomming</option>
-                                <option value="">GSR1 - Outgoing</option>
-                                <option value="">GSR2(A) - Incomming</option>
-                                <option value="">GSR2(B) - Incomming</option>
-                                <option value="">GSR2 - Outgoing</option>
+                                <option value="">Bolero</option>
+                                <option value="">Ford EcoSport</option>
+                                <option value="">Hyundai</option>
+                                <option value="">Isuzu</option>
+                                <option value="">Lexus LX</option>
+                                <option value="">Mahindra</option>
+                                <option value="">Maruti</option>
+                                <option value="">Mitsubishi</option>
+                                <option value="">Prado</option>
+                                <option value="">Renault KWID</option>
                             </select>
                         </div>
                         <div class="sub-content2">
