--- a/registerUser.html
+++ b/registerUser.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login to avail services</title>
+    <script src="https://kit.fontawesome.com/45fa29d934.js" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="registerUser.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
@@ -27,6 +28,11 @@
     <form>
         <h3>Register as user</h3>
         <div class="content">
+            <div class="back-arrow">
+                <a href="landingPage.html">
+                     <i class="fa-solid fa-arrow-left fa-2xl"></i>
+                </a>
+            </div>
             <div class="left">
                 <label for="username">Full Name</label>
                 <input type="text" placeholder="privide your name" id="username" required>
