--- a/selectServices.html
+++ b/selectServices.html
@@ -26,12 +26,12 @@
                 <a id="menu3" href="#" class="menu">About Us</a>
             </nav>
             <div class="rightCompo">
-                <a href="userprofile.html" id="u-profile"><i class="fa fa-user fa-lg"></i></a>
+                <a href="userProfilePage.html" id="u-profile"><i class="fa fa-user fa-lg"></i></a>
                 <h3>User Name</h3>
                 <div class="dropdown">
                     <i class="fa fa-bars fa-2x" onclick="myFunction()" id="hamburg" style="cursor:pointer;"></i>
                     <div id="myDropdown" class="dropdown-content">
-                        <a href="#">profile</a>
+                        <a href="userProfilePage.html">profile</a>
                         <a href="#">feedback</a>
                         <a href="">services</a>
                         <a href="landingPage.html" id="logOut" onclick="logOut()">logout</a>
