--- a/loginPage.html
+++ b/loginPage.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login to avail services</title>
+    <script src="https://kit.fontawesome.com/45fa29d934.js" crossorigin="anonymous"></script> 
     <link rel="stylesheet" href="loginPage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
@@ -14,6 +15,11 @@
     </div>
 
     <form method="post" action="registeredUser.html">
+        <div class="back-arrow">
+            <a href="landingPage.html">
+                 <i class="fa-solid fa-arrow-left fa-2xl"></i>
+            </a>
+        </div>
         <h3>Login Here</h3>
         <label for="username">Username</label>
         <input type="email" placeholder="Email" id="username">
