--- a/bookingForm.html
+++ b/bookingForm.html
@@ -1,17 +1,14 @@
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <script src="https://kit.fontawesome.com/45fa29d934.js" crossorigin="anonymous"></script> 
     <link href="/your_path_to_version_6_files/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="bookingForm.css">
 </head>
-
 <body>
     <div class="wrapper">
         <header id="site-header">
@@ -42,6 +39,11 @@
         <!-- body content -->
 
         <div class="formFill">
+            <div class="back-arrow">
+                <a href="selectServices.html">
+                     <i class="fa-solid fa-arrow-left fa-2xl"></i>
+                </a>
+            </div>
             <div class="top-note">
                 <p><b>Fill up the following credientials to book the services.</b></p>
             </div>
