--- a/registeredUser.html
+++ b/registeredUser.html
@@ -29,7 +29,7 @@
                    <div id="myDropdown" class="dropdown-content">
                       <a href="userProfilePage.html">profile</a>
                       <a href="#">feedback</a>
-                      <a href="">services</a>
+                      <a href="myReservation.html">my reservation</a>
                       <a href="landingPage.html" id="logOut" onclick="logOut()">logout</a>
                     </div>
                 </div>
