--- a/registeredSP.html
+++ b/registeredSP.html
@@ -21,19 +21,18 @@
                 <h2>CarWash</h2>
             </div>
             <nav id="navbar">
-                <a id="menu1" href="#" class='menu active'>Reservations</a>
                 <a id="menu2" href="serviceSP.html" class="menu">Services</a>
+                <a id="menu1" href="#" class='menu active'>Reservations</a>
             </nav>
             <div class="rightCompo">
-                <a href="userprofile.html" id="u-profile"><i class="fa fa-user fa-lg"></i></a>
+                <a href="spProfilePage.html" id="u-profile"><i class="fa fa-user fa-lg"></i></a>
                 <h4>User Name</h4>
                 <div class="dropdown">
                     <i class="fa fa-bars fa-2x" onclick="myFunction()" id="hamburg" style="cursor:pointer;"></i>
                     <div id="myDropdown" class="dropdown-content">
-                        <a href="#">profile</a>
+                        <a href="spProfilePage.html">profile</a>
                         <a href="#">feedback</a>
-                        <a href="">services</a>
-                        <a href="landingPage.html" id="logOut" onclick="logOut()">logout</a>
+                        <a href="loginPage.html" id="logOut" onclick="logOut()">logout</a>
                     </div>
                 </div>
             </div>
