about us & feedback

--- a/landingPage.html
+++ b/landingPage.html
@@ -18,7 +18,7 @@
             <nav id="navbar">
                 <a id="menu1" href="#" class='menu active'>Home</a>
                 <a id="menu2" href="#service" class="menu">Services</a>
-                <a id="menu3" href="#" class="menu">About Us</a>
+                <a id="menu3" href="aboutUs.html" class="menu">About Us</a>
             </nav>
             <div class="rightCompo">
                 <i id="signin" onclick="SignIn()" class="fa fa-sign-in fa-lg" aria-hidden="true" ></i>
