--- a/registeredUser.html
+++ b/registeredUser.html
@@ -19,7 +19,7 @@
                 <a id="menu1" href="#" class='menu active'>Home</a>
                 <a id="menu2" href="booking.html" class="menu">Booking</a>
                 <a id="menu2" href="#services" class="menu">Services</a>
-                <a id="menu3" href="#" class="menu">About Us</a>
+                <a id="menu3" href="registeredAboutUs.html" class="menu">About Us</a>
             </nav>
             <div class="rightCompo">
                 <a href="userProfilePage.html" id="u-profile"><i class="fa fa-user fa-lg"></i></a>
@@ -28,7 +28,7 @@
                     <i class="fa fa-bars fa-2x" onclick="myFunction()" id="hamburg" style="cursor:pointer;"></i>
                    <div id="myDropdown" class="dropdown-content">
                       <a href="userProfilePage.html">profile</a>
-                      <a href="#">feedback</a>
+                      <a href="feedback.html">feedback</a>
                       <a href="myReservation.html">my reservation</a>
                       <a href="landingPage.html" id="logOut" onclick="logOut()">logout</a>
                     </div>
@@ -121,12 +121,14 @@
                 </div>      
         </div>
         <div class="feedback">
-            <i class="far fa-comment-dots fa-lg"></i>
+            <a href="feedback.html"><i class="far fa-comment-dots fa-lg"></i></a>
             <p>Feedback</p>
         </div>
         <div class="feedbackBottom">
             <div class="feedbackLink">
-                <i id="chat-bottom" class="far fa-comment-dots fa-2x"></i>
+                <a href="feedback.html">
+                     <i id="chat-bottom" class="far fa-comment-dots fa-2x"></i>
+                </a>
                 <p>Help us to improve. Click on <strong style="color:#4B95FF"> Chat icon</strong> to provide your <strong style="color:#4B95FF">Feedback</strong>.</p>
             </div>
         </div>
